--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,34 +1,148 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;800&display=swap');
 @import url("https://use.typekit.net/che8gwv.css");
 
-#map{
-    width:100%;
-    height: 700px;
-    border: 1px solid #8C8C8C;
-    background-color: #BFBFBF;
+.container{
+    width: 90vw;
+}
+/*--Hero Section Styling--*/
+
+#heroouter{
+    height: 50vh;
+    background-image: url("../images/peter-mitchell-3M0bvgkBWv0-unsplash.jpg");
+    background-position: contain;
+    background-repeat: no-repeat;
+    background-size: cover;
+    filter: blur(2px);
+    filter: brightness(-10%);
+}
+
+#herotext{
+    margin-top: -10%;
+    margin-left: 15%;
+    position: absolute;
+    }
+
+#herotext h1{
     text-transform: uppercase;
+    color:#FFFFFF;
+    font-family: 'brandon-grotesque', sans-serif;
+    font-weight: 800;
+    font-size: 36px;
+    line-height: 0.8;
+    margin-bottom: 20px;
+}  
+
+#herotext h4{
+    color: #FFFFFF;
+    font-family: 'Montserrat', sans-serif;
+    font-weight: 600;
+    font-style: normal;
+    line-height: 0.8;
+    font-size: 20px;
+    }
+
+/*--Map Section Styling--*/
+
+#map{
+    width:80%;
+    height: 75vh;
+    }
+
+#mapwrapper{
     background-color: #BFBFBF;
+    }
+/*--Selection Section Styling--*/
+
+.buttons{
+    margin-top: 30px;
+    margin-bottom: 25px;
+}
+
+.buttonsheading{
+    text-transform: uppercase;
+    color: #8c8c8c;
     font-family: 'brandon-grotesque', sans-serif;
     font-weight: 800;
     font-style: normal;
-}
+    margin-top: 20px;
+    margin-bottom: 15px;
+    }
 
 .buttons button{
-    width: 25%;
+    width: 20%;
+    margin: 0 auto;
+    font-size: 14px;
+    margin-top: 20px;
+    margin-bottom: 15px;
+    }
+
+.buttons #getdata{
+   width: 75%;   
+    }
+
+.selectorbutton {
+    width: 10px;
+    text-transform: uppercase;
+    background-color: #61788C;
+    color: #FFFFFF;
+    font-family: 'Montserrat', sans-serif;
+    font-weight: 600;
+    font-style: normal;
 }
 
-#demo{
+/*--Content Section Styling--*/
+
+#datawrapper{
    border: 1px solid black;
 }
+
 .producerbox{
     margin-bottom: 50px;
-   }
-
-.producerimage{
-    width: 60%;
-    height: 100px;
+}
+.producerbox h2{
+    padding-left: 10px;
+}
+.producerbox h2 h6{
+    display: inline;
+    float: right;    
 }
 
+.barbox{
+    margin-bottom: 50px;
+}
+
+.barbox h2{
+    padding-left: 10px;
+}
+
+.barbox h2 h6{
+    display: inline;
+    float: right;    
+}
+
+.barbox h6{
+    margin: 10px;
+    font-size: 14px;
+    color: #FFFFFF;    
+}
+
+.producerbox h6{
+    margin: 10px;
+    font-size: 14px;
+    color: #364C59;    
+}
+
+.producerimage{
+    width: 100%;
+    height: 400px;
+    margin: 0 auto;
+}
+
+.barimage{
+    width: 100%;
+    height: 400px;
+    margin: 0 auto;
+}
 
 .producerheading{
     text-transform: uppercase;
@@ -36,18 +150,42 @@
     font-family: 'brandon-grotesque', sans-serif;
     font-weight: 800;
     font-style: normal;
+    margin-top: 2px;
+    margin-bottom: 2px;
+}
+
+.barheading{
+    text-transform: uppercase;
+    background-color: #BFBFBF;
+    font-family: 'brandon-grotesque', sans-serif;
+    font-weight: 800;
+    font-style: normal;
+    margin-top: 2px;
+    margin-bottom: 2px;
 }
 
 .producerbody{
     margin-bottom: 5px;
     padding-top: 10px;
     padding-left: 5px;
-    min-height: 50px;
+    min-height: 100px;
     background-color: #BFBFBF;
     font-family: 'Montserrat', sans-serif;
     font-weight: 400;
     font-style: normal;
-    font-size: 14px;
+    font-size: 16px;
+}
+
+.barbody{
+    margin-bottom: 5px;
+    padding-top: 10px;
+    padding-left: 5px;
+    min-height: 100px;
+    background-color: #BFBFBF;
+    font-family: 'Montserrat', sans-serif;
+    font-weight: 400;
+    font-style: normal;
+    font-size: 16px;
 }
 
 .infobutton{
@@ -61,16 +199,6 @@
 
 .nearbybutton{
     width: 50%;
-    text-transform: uppercase;
-    background-color: #61788C;
-    color: #FFFFFF;
-    font-family: 'Montserrat', sans-serif;
-    font-weight: 600;
-    font-style: normal;
-}
-
-.selectorbutton {
-    width: 10px;
     text-transform: uppercase;
     background-color: #61788C;
     color: #FFFFFF;
