--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -60,7 +60,7 @@ a:hover{
 }
 
 .active{
-    border-bottom: 1px solid #FFFFFF;
+    border-bottom: 1px solid #FFFFFF75;
 }
  
 
@@ -115,7 +115,7 @@ a:hover{
 
 #herotext{
     margin-top: -10%;
-    margin-left: 15%;
+    margin-left: 20%;
     position: absolute;
 }
 
@@ -124,18 +124,19 @@ a:hover{
     color:#FFFFFF;
     font-family: 'brandon-grotesque', sans-serif;
     font-weight: 800;
-    font-size: 72px;
-    line-height: 0.8;
+    font-size: 48px;
+    line-height: 1;
     margin-bottom: 20px;
+    text-align: right;
 }  
 
 #herotext h4{
     color: #FFFFFF;
     font-family: 'Montserrat', sans-serif;
-    font-weight: 600;
-    font-style: normal;
-    line-height: 0.8;
-    font-size: 20px;
+    font-weight: 500;
+    line-height: 1.2;
+    font-size: 28px;
+    text-align: right;
 }
 
 /*--Categories Section (Homepage only)--*/
@@ -232,7 +233,7 @@ a:hover{
 
 #reviewsimagery h3{
     position: absolute;
-    margin-top: 10%;
+    margin-top: 15%;
     margin-left: 55%;
     font-family: 'montserrat', sans-serif;
     font-weight: 500;
@@ -258,7 +259,7 @@ a:hover{
 
 .review-content-heading{
     margin-top: 25px;
-    text-align: center;
+    
     color: #8C8C8C;
     text-transform: uppercase;
     font-family: 'brandon-grotesque',sans-serif;
@@ -273,17 +274,19 @@ a:hover{
     text-align: justify;
     margin-top: 25px;
     min-height: 100px;
+    width: 80%;
 }
+
 .review-content-reviewer{
     color:#364C59;
     font-family: 'montserrat',sans-serif;
     text-align: justify;
     font-weight: 600;
-    text-align: center;
     margin-top: 25px;
 }
 
 /*--Contact us form*/
+
 #contactformwrapper{
     background-color:#61788C;
     height: 75vh;
@@ -332,24 +335,6 @@ a:hover{
     float: right;
 }
 
-
-/*--Map Section Styling (Things to do page only)--*/
-
-#mapwrapper{
-    margin: 50px auto;
-    width: 90vw;
-    height: 75vh;
-    padding: 50px;
-    background-color: #BFBFBF;
-}
-    
-#map{
-    margin: 0 auto;
-    width: 100%;
-    height: 100%;
-    border: 1px solid #0D0D0D;
-}
-
 /*--Footer Dection (All pages)--*/
 
 #footerwrapper{
@@ -378,12 +363,12 @@ a:hover{
 #footeritems{
     margin-top: 25px;
 }
+
 #footeritems li{
     margin-bottom: 25px;
     list-style-type: none;
     display: flex;
-    flex-direction: column-reverse;
-    
+    flex-direction: column-reverse;    
 }
 
 #footeritems a{
@@ -392,94 +377,77 @@ a:hover{
     font-family: 'brandon-grotesque', sans-serif;
     text-transform: uppercase;
     font-weight: 500;
-    margin-left: 100px;
-   
-    
+    margin-left: 100px;    
 }
 
 #footeritems i{
     margin-right: 25px;
 }
 
+/*--Selection Section Styling (Things to do page only)--*/
 
-    /*--Selection Section Styling (Things to do page only)--*/
-
-.buttons{
-    margin-top: 30px;
+#selectionouter{
+    margin-top: 25px;
     margin-bottom: 50px;
 }
 
-.buttonsheading{
+#selectionheadingicon i{
+    color: #364C59;
+}
+
+#selectionheadingtext h2{
     text-transform: uppercase;
-    color: #61788C;
+    color: #364C59;
     font-family: 'brandon-grotesque', sans-serif;
-    font-weight: 800;
-    font-style: normal;
-    margin-top: 20px;
-    margin-bottom: 15px;
-}
-
-.col-1 i{
-    color: #61788C;
-}
-
-.buttons button{
-    width: 15%;
-    margin: 0 auto;
-    font-size: 14px;
-    margin-top: 20px;
-    margin-bottom: 15px;
-}
-
-.col-4 button{
-    width: 75%;
-    margin: 0 auto;
-    font-size: 14px;
-    margin-top: 20px;
-    margin-bottom: 15px;
-}
-
-.buttons #getdata{
-   width: 75%;   
-}
-
-.selectorbutton {
-    width: 8px;
-    text-transform: uppercase;
-    background-color: #61788C;
-    color: #FFFFFF;
-    font-family: 'Montserrat', sans-serif;
     font-weight: 600;
     font-style: normal;
+    margin-top: 25px;
+    margin-bottom: 25px;
+}
+
+#selectionouter button{
+    margin-top: 5px;
+    margin-bottom: 5px;
 }
 
 .dropdown button {
-    text-transform: uppercase;
     background-color: #FFFFFF;
+    text-transform: uppercase;    
     color: #364C59;
     font-family: 'Montserrat', sans-serif;
-    font-weight: 800;
+    font-weight: 500;
     font-style: normal;
     font-size: 20px;
-    display: inline;
-    width: 80%;
-    
+    display: inline;       
 }
 
 .dropdown li a{
     text-transform: uppercase;
-    background-color: #61788C;
-    color: #FFFFFF;
+    background-color: #FFFFFF;
+    color: #364C59;
     font-family: 'Montserrat', sans-serif;
-    font-weight: 600;
+    font-weight: 500;
     font-style: normal;
 }
 
-/*--Content Section Styling (Things to do page only)--*/
+/*--Map Section Styling (Things to do page only)--*/
 
-#datawrapper{
-   border: 1px solid black;
+#mapwrapper{
+    margin: 50px auto;
+    width: 90vw;
+    height: 75vh;
+    padding: 50px;
+    background-color: #BFBFBF;
 }
+    
+#map{
+    margin: 0 auto;
+    width: 100%;
+    height: 100%;
+    border: 1px solid #0D0D0D;
+}
+
+/*--Content Section Styling (Things to do page only)--*/
 
 .producerbox{
     margin-bottom: 50px;
@@ -523,7 +491,8 @@ a:hover{
     text-transform: uppercase;
     font-family: 'brandon-grotesque',sans-serif;
     color: #61788C;
-    font-weight: 800;
+    font-weight: 600;
+    font-size: 18px;
     margin-top: 10px;
     margin-bottom: 10px;
     text-align: right;    
@@ -532,18 +501,17 @@ a:hover{
 .producerimage{
     width: 100%;
     height: 400px;
-    margin: 0 auto;
 }
 
 .barimage{
     width: 100%;
     height: 400px;
-    margin: 0 auto;
 }
 
 .producerheading{
     text-transform: uppercase;
     background-color: #BFBFBF;
+    color: #0D0D0D;
     font-family: 'brandon-grotesque', sans-serif;
     font-weight: 800;
     font-style: normal;
@@ -554,6 +522,7 @@ a:hover{
 .barheading{
     text-transform: uppercase;
     background-color: #BFBFBF;
+    color: #0D0D0D;
     font-family: 'brandon-grotesque', sans-serif;
     font-weight: 800;
     font-style: normal;
@@ -567,8 +536,9 @@ a:hover{
     padding-left: 5px;
     min-height: 100px;
     background-color: #BFBFBF;
+    color: #0D0D0D;
     font-family: 'Montserrat', sans-serif;
-    font-weight: 600;
+    font-weight: 500;
     font-style: normal;
     font-size: 16px;
 }
@@ -579,22 +549,14 @@ a:hover{
     padding-left: 5px;
     min-height: 100px;
     background-color: #BFBFBF;
+    color: #0D0D0D;
     font-family: 'Montserrat', sans-serif;
-    font-weight: 600;
+    font-weight: 500;
     font-style: normal;
     font-size: 16px;
 }
 
 .infobutton{
-    width: 50%;
-    text-transform: uppercase;
-    background-color: #8C8C8C;
-    font-family: 'Montserrat', sans-serif;
-    font-weight: 600;
-    font-style: normal;
-}
-
-.nearbybutton{
     width: 50%;
     text-transform: uppercase;
     background-color: #61788C;
@@ -617,7 +579,7 @@ a:hover{
     font-style: normal;
     width: 80%;
     margin: 0 auto;
-    color: #8C8C8C;
+    color: #364C59;
 }
 
 .modal-body{
@@ -637,6 +599,7 @@ a:hover{
    text-align: justify;
    width: 50%;
    color: #364C59;
+   font-weight: 500;
 }
 
 .modal-content-info{
@@ -646,7 +609,7 @@ a:hover{
     font-family: 'brandon-grotesque', sans-serif;
     font-weight: 800;
     font-size: 24px;
-    color: #8C8C8C; 
+    color: #364C59; 
 }
 
 .modal-content-info li{
@@ -666,10 +629,7 @@ a:hover{
     font-family: 'Montserrat', sans-serif;
     font-weight: 600;
     font-style: normal;
-    background-color: #364C59;
-}
-
-.reviewcontent{
-    width: 33%
+    background-color: #61788C;
+    color: #FFFFFF;
 }
 
