--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -248,10 +248,6 @@ a:hover{
     min-height:75vh;
 }
 
-.review-content{
-    max-height: 50vh;
-}
-
 .review-content-image {
     width: 200px;
     height: 200px;
@@ -291,7 +287,7 @@ a:hover{
 
 #contactformwrapper{
     background-color:#61788C;
-    height: 75vh;
+    min-height: 100vh;
 }
 
 #contactformheading h2{
@@ -640,7 +636,7 @@ a:hover{
 @media screen and (max-width: 576px) {
 
     #navigation{
-        margin-top: 10px;
+        margin-top: 5px;
     }
     
     #nav{   
@@ -649,8 +645,166 @@ a:hover{
     
     .navbar-brand img{
         width: 100px;
-        }
+        margin-top: -10px;
+    }
+       
+    .navbar-list-items{
+        font-size: 12px;
+        margin-top: 15px;
+        margin-left:45%;
+    }
     
+    #homeheroouter{
+        background-position: center;
+        background-size:cover;    
+    }
+    
+    #homeherotext{
+        margin-top: -50%;
+        margin-left: 20%;        
+    }
+    
+    #homeherotext h1{
+        font-size: 18px;
+        line-height: 1.5;
+    }
+    
+    #homeherotext h4{
+        line-height: 1.5;
+        font-size: 10px;
+    }
+    
+    #categoriesheading h2{
+        font-size: 16px;
+    }
+    
+    #categorieslabel h3{
+        font-size: 12px;
+    }
+    
+    #categoriescontent img{
+        width: 150px;
+        height: 150px;
+        border-radius: 50%;
+        margin-bottom: 5px;        
+    }
+    
+    #reviewswrapper{
+        min-height: 225vh;
+        margin-top: 25px;
+    }
+    
+    #reviewsimagery{
+        
+        width: 100vw;
+        background-position:right;
+        background-size:cover;
+    }
+    
+    #reviewsimagery h2{
+        width: 100%;
+        margin-top: 10%;
+        margin-left: 5%;
+        text-align: center;
+        color: #FFFFFF;
+        font-size: 18px;
+        line-height: 1.2;
+    }
+    
+    #reviewsimagery i{
+        margin-right: 10px;
+    }
+    
+    #reviewsimagery h3{
+        display: none;        
+    }
+    
+    #reviewsouter{
+        margin-top: 5px;        
+    }   
+    
+    .review-content-image {
+        width: 100px;
+        height: 100px;
+        border-radius: 50%;
+    }
+    
+    .review-content-heading{
+        margin-top: 10px;
+    }
+    
+    .review-content-text{
+        
+        font-size: 14px;
+        margin-top: 10px;
+        width: 100%;
+    }
+    
+    .review-content-reviewer{
+        font-size: 14px;
+        margin-top: 5px;
+    }
+    
+    #contactformwrapper{
+        background-color:#61788C;
+        min-height: 100vh;
+    }
+        
+    #contactform label {
+        color:#364C59;
+        text-transform: uppercase;
+        font-family: 'brandon-grotesque',sans-serif;
+        font-weight: 600;
+        font-size: 12px;
+        margin-top: 5px;
+    }
+    
+    .form-text{
+        font-size: 12px;
+        margin-top: 5px;
+    }
+    
+    #contactform button{
+        width: 50%;
+    }
+    
+    #contactformheading h2{
+        font-size: 24px;
+        margin-top: 10px;    
+    }
+    
+    #contactformheading h4{  
+        margin-top: 5px;
+        font-size: 14px;    
+    }
+        
+    #footerimagery{
+        display: none;
+    }
+    
+    #footertext{
+        width: 100%;
+        font-size: 14px;
+    }
+    
+    #footeritems a{
+        font-size: 14px; 
+    }
+    
+    #footeritems i{
+        margin-right: 10px;
+    }
+
+    #footeritems ul{
+        display: inline;
+        float: left;
+    }
+
+    #footeritems li{
+        width: 100%;
+        margin-bottom: 25px;   
+    }  
+        
 }
 
 /*--Styling for devices between 576px and 768px (tablets/phone landscape)--*/
@@ -765,6 +919,10 @@ a:hover{
 
 .review-content{
     max-height: 50vh;
+}
+
+#contactformwrapper{
+    min-height: 75vh;
 }
 
 
