--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -283,7 +283,7 @@ a:hover{
     margin-top: 10px;
 }
 
-/*--Contact us form*/
+/*--Contact us form (Hone Page only)*/
 
 #contactformwrapper{
     background-color:#61788C;
@@ -899,7 +899,6 @@ a:hover{
     
 }
 
-
 .review-content-image {
     width: 100px;
     height: 100px;
@@ -924,7 +923,6 @@ a:hover{
 #contactformwrapper{
     min-height: 75vh;
 }
-
 
 #contactformheading h2{
     font-size: 24px;
@@ -956,6 +954,158 @@ a:hover{
 #footeritems i{
     margin-right: 10px;
 }
+
+#herotext{
+    margin-top: -20%;
+    margin-left: 0%;
+}
+
+#herotext h1{
+    font-size: 32px;
+    line-height: 1.2;
+    margin-bottom: 10px;
+}  
+
+#herotext h4{
+    color: #FFFFFF;
+    font-family: 'Montserrat', sans-serif;
+    font-weight: 500;
+    line-height: 1.2;
+    font-size: 18px;
+    text-align: right;
+}
+
+#selectionouter{
+    margin-top: 10px;
+    margin-bottom: 10px;
+}
+
+#selectionheadingicon i{
+    display: none;
+}
+
+#selectionheadingtext h2{
+    font-size: 18px;
+    margin-top: 5px;
+    margin-bottom: 5px;
+    text-align: center;
+}
+
+.dropdown button {
+    font-size: 14px;     
+}
+
+.dropdown li a{
+    font-size: 12px;
+}
+
+#mapwrapper{
+    
+    width: 100vw;
+    height: 75vh;
+    padding: 2px;
+    background-color: #BFBFBF;
+}
+
+.producerbox{
+    margin-bottom: 25px;
+}
+
+.producerbox h2{
+    padding-left: 5px;
+}
+
+.barbox{
+    margin-bottom: 25px;
+}
+
+.barbox h2{
+    padding-left: 5px;
+}
+
+.barbox h6{
+    margin: 5px;   
+}
+
+.producerbox h6{
+    margin: 5px;
+}
+
+.countyheading{
+    font-size: 12px;
+    margin-top: 5px;
+    margin-bottom: 5px;   
+}
+
+.producerimage{
+    height: 200px;
+}
+
+.barimage{
+    height: 200px;
+}
+
+.producerheading{
+    font-size: 24px;
+    margin-top: 2px;
+    margin-bottom: 2px;
+}
+
+.barheading{
+    font-size: 24px;
+    margin-top: 2px;
+    margin-bottom: 2px;
+}
+
+.producerbody{
+   font-size: 12px;
+}
+
+.barbody{
+    font-size: 12px;
+}
+
+.infobutton{
+    width: 100%;
+    font-size: 16px;
+}
+
+.modal-title{
+font-size: 24px;
+}
+
+.modal-body{
+    width: 100%;
+}
+
+.modal-content-title{
+    margin-top: 5px;
+    margin-bottom: 15px;
+    font-size: 14px;
+}
+
+.modal-content-text{
+    font-size: 12px;
+}
+
+.modal-content-info{
+    font-size: 16px;
+}
+
+.modal-content-info li{
+    margin-top: 30px;
+    margin-bottom: 10px;
+    font-size: 14px;
+}
+
+.modal-footer{
+    margin: 0 auto;
+}
+
+.modal-footer button{
+    font-size: 14px;
+}
+
 
 }
 
