--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -804,7 +804,153 @@ a:hover{
         width: 100%;
         margin-bottom: 25px;   
     }  
+    
+    #herotext{
+        margin-top: -25%;
+        margin-left: 5%;
+    }
+    
+    #herotext h1{
+        font-size: 18px;
+        margin-bottom: 10px;
+        text-align: center;
+    }  
+    
+    #herotext h4{
+        font-size: 10px;
+        text-align: center;
+    }
+    
+    #selectionouter{
+        margin-top: 5px;
+        margin-bottom: 5px;
+    }
+    
+    #selectionheadingicon i{
+        display: none;
+    }
+    
+    #selectionheadingtext h2{
+        font-size: 16px;
+        margin-top: 2px;
+        margin-bottom: 2px;
+        text-align: center;
+    }
+    
+    .dropdown button {
+        font-size: 10px;     
+    }
+    
+    .dropdown li a{
+        font-size: 12px;
+    }
+    
+    #mapwrapper{
         
+        width: 100vw;
+        height: 75vh;
+        padding: 2px;
+        background-color: #BFBFBF;
+    }
+    
+    .producerbox{
+        margin-bottom: 25px;
+    }
+    
+    .producerbox h2{
+        padding-left: 5px;
+    }
+    
+    .barbox{
+        margin-bottom: 25px;
+    }
+    
+    .barbox h2{
+        padding-left: 5px;
+    }
+    
+    .barbox h6{
+        margin: 5px;   
+    }
+    
+    .producerbox h6{
+        margin: 5px;
+    }
+    
+    .countyheading{
+        font-size: 12px;
+        margin-top: 5px;
+        margin-bottom: 5px;   
+    }
+    
+    .producerimage{
+        height: 200px;
+    }
+    
+    .barimage{
+        height: 200px;
+    }
+    
+    .producerheading{
+        font-size: 24px;
+        margin-top: 2px;
+        margin-bottom: 2px;
+    }
+    
+    .barheading{
+        font-size: 24px;
+        margin-top: 2px;
+        margin-bottom: 2px;
+    }
+    
+    .producerbody{
+       font-size: 12px;
+    }
+    
+    .barbody{
+        font-size: 12px;
+    }
+    
+    .infobutton{
+        width: 100%;
+        font-size: 14px;
+    }
+    
+    .modal-title{
+    font-size: 18px;
+    }
+    
+    .modal-body{
+        width: 100%;
+    }
+    
+    .modal-content-title{
+        margin-top: 5px;
+        margin-bottom: 15px;
+        font-size: 10px;
+    }
+    
+    .modal-content-text{
+        font-size: 10px;
+    }
+    
+    .modal-content-info{
+        font-size: 12px;
+    }
+    
+    .modal-content-info li{
+        margin-top: 10px;
+        margin-bottom: 10px;
+        font-size: 12px;
+    }
+    
+    .modal-footer{
+        margin: 0 auto;
+    }
+    
+    .modal-footer button{
+        font-size: 10px;
+    }
 }
 
 /*--Styling for devices between 576px and 768px (tablets/phone landscape)--*/
